--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,15 +1,9 @@
 help:
   - "&6----------------------------------------------------"
+  - "&3/changepassword <current password> <new password> to change you password."
   - "&3/unregister <current password> no longer be registered."
-  - "&3/skin <license name>"
-  - "&3/skinupdate to update you license skin."
-  - "&3/skinupload <url> to upload castom skin."
-  - "&3/deathmessages to deathmessages plugin command."
+  - "&3/skin to get skin help."
   - "&3/whisper <name> <message> to pm a player."
-  - "&3/reply to reply to the last person that messaged you."
-  - "&3/ignore <name> to ignore or un-ignore player."
   - "&3/kill to kill you."
-  - "&3/stats for world age, size and players files saved."
-  - "&3/reloadChunks to reload chunks to eliminate lags."
-  - "&3/reloadShaders to reload shaders to eliminate lags."
+  - "&3/stats for world age, size, and players count."
   - "&6----------------------------------------------------"
